+ тест на get_product_trace

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -170,7 +170,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(254.2428+13.5278j, dtype=torch.complex128)"
+       "tensor(-47.1678+763.2583j, dtype=torch.complex128)"
       ]
      },
      "execution_count": 7,
@@ -213,7 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(254.2428+13.5278j, dtype=torch.complex128)\n"
+      "tensor(-47.1678+763.2583j, dtype=torch.complex128)\n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(1.0000-5.1082e-18j, dtype=torch.complex128)"
+       "tensor(1.0000-3.4515e-17j, dtype=torch.complex128)"
       ]
      },
      "execution_count": 12,
@@ -314,17 +314,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c76b8a1",
+   "metadata": {},
+   "source": [
+    "## Проверка get_product_trace"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "59948e78",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "E = gen_E()\n",
+    "rho = MPO(info)\n",
+    "rho.random_rho(N, 5);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "eec92971",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = rho.get_product(E)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "22b41ac3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.1200-1.1509e-17j, dtype=torch.complex128)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.get_trace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7e7d192b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.1200-1.5979e-18j, dtype=torch.complex128)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rho.get_product_trace(E)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f99c20df",
+   "id": "3f8c993f",
    "metadata": {},
    "outputs": [],
    "source": []
