--- a/test1.ipynb
+++ b/test1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0d2f3e78",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import time\n",
+    "from torch import optim\n",
     "\n",
     "N = 5\n",
     "\n",
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "23f50578",
    "metadata": {},
    "outputs": [],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "54206aa5",
    "metadata": {},
    "outputs": [],
@@ -87,21 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "50f7a182",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(1.+0.j, dtype=torch.complex128)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mpo.get_trace()"
    ]
@@ -116,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0b361032",
    "metadata": {},
    "outputs": [],
@@ -151,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fba4ae11",
    "metadata": {},
    "outputs": [],
@@ -163,60 +153,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3f400bed",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(-47.1678+763.2583j, dtype=torch.complex128)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mpo.get_trace()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "439e98db",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 2, 2, 2, 1]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mpo.r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "4bb403e0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(-47.1678+763.2583j, dtype=torch.complex128)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = mpo.get_full_matrix()\n",
     "print(A.trace())"
@@ -224,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0edf55be",
    "metadata": {},
    "outputs": [],
@@ -245,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "94993bd0",
    "metadata": {},
    "outputs": [],
@@ -256,49 +216,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "62280c82",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(1.0000-3.4515e-17j, dtype=torch.complex128)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mpo.get_trace()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e1f9dbff",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 16, 16, 16, 16, 1]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mpo.r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0ac695f2",
    "metadata": {},
    "outputs": [],
@@ -315,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c76b8a1",
+   "id": "82bbff9c",
    "metadata": {},
    "source": [
     "## Проверка get_product_trace"
@@ -323,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "59948e78",
    "metadata": {},
    "outputs": [],
@@ -335,8 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "eec92971",
+   "execution_count": null,
+   "id": "80302ad0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,50 +283,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "22b41ac3",
+   "execution_count": null,
+   "id": "1dfc00c7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.1200-1.1509e-17j, dtype=torch.complex128)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a.get_trace()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "7e7d192b",
+   "execution_count": null,
+   "id": "91327018",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.1200-1.5979e-18j, dtype=torch.complex128)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rho.get_product_trace(E)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c82775c2",
+   "metadata": {},
+   "source": [
+    "## Оптимизация"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f8c993f",
+   "id": "328556cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def optimize(list_E: list, values: list, N: int, R: int, eps: float):\n",
+    "    rho = MPO(info)\n",
+    "    rho.random_rho(N, R)\n",
+    "    [ x.requires_grad_(True) for x in rho.tt_cores]\n",
+    "    optimizer = optim.Adam(rho.tt_cores)\n",
+    "    it = 0\n",
+    "    f = torch.tensor(0 + 0.j, device=info.device)\n",
+    "    f_prev = 1.0\n",
+    "    k = 0\n",
+    "    while(abs(f.item()) > eps or it == 0):\n",
+    "        t1 = time.time()\n",
+    "        optimizer.zero_grad()\n",
+    "        f = torch.tensor(0 + 0.j, device=info.device)\n",
+    "        for n, E in enumerate(list_E):\n",
+    "            z = (rho.get_product_trace(E) - values[n])\n",
+    "            f += torch.conj(z) * z\n",
+    "            #f += torch.abs(z)\n",
+    "        f = f / len(values)\n",
+    "\n",
+    "        t2 = time.time()\n",
+    "        \n",
+    "        f.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        t3 = time.time()\n",
+    "\n",
+    "        print(f'\\rIteration {it}: MSE={f.item()}, t_calc={t2-t1}, t_backward={t3-t2}', end = '')\n",
+    "\n",
+    "        k = k + 1 if f.item() == f_prev else 0\n",
+    "        f_prev = f.item()\n",
+    "        it += 1\n",
+    "        if (k == 20):\n",
+    "            break\n",
+    "    return rho"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09449288",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_E = [gen_E() for i in range(1000)]\n",
+    "rho_ideal = MPO(info)\n",
+    "rho_ideal.random_rho(N, 1)\n",
+    "values = [rho_ideal.get_product_trace(E) for E in list_E]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1f06d39",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "rho = optimize(list_E, values, N, 1, 1e-8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0cd08b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    f_prov = torch.tensor(0 + 0.j, device=info.device)\n",
+    "    for i in range(10000):\n",
+    "        E_prov = gen_E()\n",
+    "        z = rho.get_product_trace(E_prov) - rho_ideal.get_product_trace(E_prov)\n",
+    "        f_prov += torch.conj(z) * z\n",
+    "    f_prov /= 10000\n",
+    "    print(f_prov)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b79c001",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E = gen_E()\n",
+    "torch.abs(rho.get_product_trace(E) - rho_ideal.get_product_trace(E)) ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9bb2a6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rho.r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97a8cac3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rho_ideal.r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e4b3537",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_prov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42c60456",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rho.get_trace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c788099",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean(np.array(values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ed7769c",
    "metadata": {},
    "outputs": [],
    "source": []
